examples/python-web-app/deploys.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: python-deployment
  labels:
    app: python
spec:
  replicas: 3
  selector:
    matchLabels:
      app: python
  template:
    metadata:
      labels:
        app: python
    spec:
      containers:
      - name: python-app
        image: syed0071/python-sample-app:v1
        ports:
        - containerPort: 8000
