examples/python-web-app/services.yml
apiVersion: v1
kind: Service
metadata:
  name: python-service-example
spec:
  type: NodePort
  selector:
    app: python
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 31005
